--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
 
         <section id="main">
           <ul id="todo-list">
-            {{#each}}
-              <li {{ bind-attr class="isCompleted:completed" }}>
-                <input type="checkbox" class="toggle">
+            {{#each itemController="todo"}}
+              <li {{bind-attr class="isCompleted:completed"}}>
+                {{input type="checkbox" checked=isCompleted class="toggle" }}
                 <label>{{title}}</label><button class="destroy"></button>
               </li>
             {{/each}}
@@ -62,5 +62,6 @@
     <script src="js/router.js"></script>
     <script src="js/models/todo.js"></script>
     <script src="js/controllers/todos_controller.js"></script>
+    <script src="js/controllers/todo_controller.js"></script>
   </body>
 </html>
